--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-	  "dev": "svelte-kit dev",
-	  "build": "svelte-kit build",
-	  "preview": "svelte-kit preview",
-	  "check": "svelte-check",
-	  "lint": "prettier --check . && eslint .",
-	  "format": "prettier --write ."
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-	  "@sveltejs/kit": "^2.0.0",
-	  "@sveltejs/vite-plugin-svelte": "^3.0.0",
-	  "eslint": "^9.0.0",
-	  "prettier": "^3.1.1",
-	  "svelte": "^4.2.7",
-	  "svelte-check": "^4.0.0",
-	  "vite": "^5.4.4"
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"eslint": "^9.0.0",
+		"prettier": "^3.1.1",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"vite": "^5.4.4"
 	},
 	"dependencies": {
-	  "@supabase/supabase-js": "^2.45.4"
+		"@supabase/supabase-js": "^2.45.4",
 	}
-  }
-  
+}
