--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-	"name": "sveltekit-app",
+	"name": "new-bbms-public",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"eslint": "^9.0.0",
-		"prettier": "^3.1.1",
 		"svelte": "^4.2.7",
-		"svelte-check": "^4.0.0",
-		"vite": "^5.4.4"
+		"vite": "^5.0.3"
 	},
+	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.45.4",
+		"bootstrap": "^5.3.3",
+		"contentful": "^10.15.1"
 	}
 }
