--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tsconfig/svelte": "^5.0.4",
 		"svelte": "^4.2.7",
+		"typescript": "^5.6.2",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@contentful/app-sdk": "^4.23.1",
-		"@supabase/supabase-js": "^2.39.3",
+		"@supabase/supabase-js": "^2.45.4",
 		"audit": "^0.0.6",
 		"contentful": "^10.6.12",
 		"fix": "^0.0.6",
