--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
 		"@supabase/supabase-js": "^2.39.3",
 		"audit": "^0.0.6",
 		"contentful": "^10.6.12",
-		"fix": "^0.0.6",
+		"fix": "^0.0.3",
 		"flatpickr": "^4.6.13",
 		"fund": "^1.0.0",
+		"inputmask": "^5.0.9",
 		"moment": "^2.30.1"
 	}
 }
